# prologue

./: .gitignore  build.py  config.toml  pyproject.toml  requirements.txt  run.py  rxconfig.py
assets/css/: styles.css
prologue/: config.py  math.py  prologue.py  state.py
prologue/components/: __init__.py  background.py  buttons.py  framegrid.py
